--- a/css/slides.css
+++ b/css/slides.css
@@ -11,6 +11,15 @@
     left: 10px;
 }
 
+.remark-slide-content .myheader-right {
+    color: #696969;
+    font-size: .5em;
+    float: right;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
 .gray {
     color: gray;
 }
